--- a/index.html
+++ b/index.html
@@ -237,7 +237,11 @@
 
 
     <!-- scroll button -->
-  
+   <div class="section">
+     <div class="scroll_button_section">
+        <a id="scroll_btn"><span>hello</span></a>
+    </div>
+   </div>
     <!-- ==============================
         Slider Section
     =================================== -->
